tests/positive/pr1162_empty_subprogram_body_followed_by_sibling.safe
-- Test: pr1162_empty_subprogram_body_followed_by_sibling
-- Description: Empty subprogram bodies do not consume later sibling package items.
-- Expected: ACCEPT

package pr1162_Empty_Subprogram_Body_Followed_By_Sibling

   function skip

   function value returns integer
      return 1;
